[gd_scene load_steps=13 format=3 uid="uid://ns106reuavk7"]

[ext_resource type="Texture2D" uid="uid://6lcywunqx5r1" path="res://assets/sprites/circle_05.png" id="1_mm651"]
[ext_resource type="Script" path="res://scripts/storm_effects.gd" id="1_wwoii"]
[ext_resource type="Shader" path="res://shaders/lightning.gdshader" id="2_sfbn0"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_x3q3i"]
emission_shape = 3
emission_box_extents = Vector3(40, 20, 40)
direction = Vector3(0, -1, 0)
spread = 5.0
initial_velocity_min = 15.0
initial_velocity_max = 25.0
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="Curve" id="Curve_i5tbm"]
max_value = 0.1
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0184211, 0.0564909), 0.241229, 0.241229, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jvfit"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.687738, 0.705087, 0.689771, 0.823529)
albedo_texture = ExtResource("1_mm651")
use_particle_trails = true

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_tgqmx"]
material = SubResource("StandardMaterial3D_jvfit")
shape = 0
size = 2.0
section_length = 0.4
curve = SubResource("Curve_i5tbm")

[sub_resource type="ViewportTexture" id="ViewportTexture_xetsv"]
viewport_path = NodePath("lightning/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7y1dk"]
shader = ExtResource("2_sfbn0")
shader_parameter/effect_color = Color(0.2, 0.3, 0.8, 1)
shader_parameter/octave_count = 10
shader_parameter/amp_start = 0.5
shader_parameter/amp_coeff = 0.5
shader_parameter/freq_coeff = 2.0
shader_parameter/speed = 0.5

[sub_resource type="Animation" id="Animation_8fg8q"]
resource_name = "lightning"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightningLight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.266667, 0.366667, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 3.0, 0.0, 7.0, 0.0]
}

[sub_resource type="Animation" id="Animation_ohgb0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightningLight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_867sa"]
_data = {
"RESET": SubResource("Animation_ohgb0"),
"lightning": SubResource("Animation_8fg8q")
}

[node name="storm_effects" type="Node3D"]
script = ExtResource("1_wwoii")

[node name="rain" type="GPUParticles3D" parent="."]
amount = 1800
randomness = 1.0
visibility_aabb = AABB(-20, -4, -20, 40, 20, 40)
trail_enabled = true
trail_lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_x3q3i")
draw_pass_1 = SubResource("RibbonTrailMesh_tgqmx")

[node name="lightning_timer" type="Timer" parent="."]

[node name="lightning" type="Sprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
billboard = 1
texture = SubResource("ViewportTexture_xetsv")

[node name="SubViewport" type="SubViewport" parent="lightning"]
disable_3d = true
transparent_bg = true
size = Vector2i(2048, 2048)
render_target_update_mode = 4

[node name="TextureRect" type="TextureRect" parent="lightning/SubViewport"]
material = SubResource("ShaderMaterial_7y1dk")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mm651")

[node name="LightningLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 15.7142, 0)
light_energy = 0.0

[node name="LightningAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_867sa")
}

[connection signal="timeout" from="lightning_timer" to="." method="_on_lightning_timer_timeout"]
